# Ammonyte

./: .gitignore  CITATION.cff  MAINTAINER_NOTES.html  README.md  docsmith.yaml  index.html  objects.txt  paper.bib  paper.md  pyproject.toml  requirements.txt  search.json  setup.py
.github/workflows/: deploy-latest.yml  deploy-release.yml
ammonyte/: _docsmith_docstring_template.py  _docsmith_example.py
ammonyte/core/: __init__.py  geoseries.py  recurrence_matrix.py  recurrence_network.py  rqa_res.py  series.py  time_embedded_series.py  transitions.py
ammonyte/tests/: conftest.py  test_core_geoseries.py  test_core_rqa_res.py  (+7 more)
api/: core.geoseries.GeoSeries.html  core.recurrence_matrix.RecurrenceMatrix.html  core.recurrence_network.RecurrenceNetwork.html  core.rqa_res.RQARes.html  core.series.Series.html  core.time_embedded_series.TimeEmbeddedSeries.html  core.transitions.DeterministicTransitions.html  utils.ks.KS_test.html  utils.lerm_transitions.lerm_transition.html  utils.metrics.DetectionMetrics.html  utils.metrics.evaluate_detection.html  utils.parameters.tau_search.html  utils.plotting.bootstrap_fill_plot.html  utils.ruptures_transitions.ruptures_transition.html
docs/: MAINTAINER_NOTES.md  _quarto.yml  _version-picker.html  index.qmd  styles.css
get-started/: contributing.html  installation.html  overview.html  quickstart.html
latest/: MAINTAINER_NOTES.html  index.html  search.json
methods/: ruptures.html
notebooks/: Getting_Started.html  Getting_Started.ipynb  KS_test.ipynb  KS_test_Validation.ipynb  LERM_validation.html  LERM_validation.ipynb  Ruptures_Validation.ipynb
tutorials/: index.html
(+145 files in other folders)
